Better describe method signatures